# SpotHomeLight

./: README.md  pyproject.toml
.github/workflows/: manual_publish.yml  publish.yml
spothomelight/: auth.py  config.py  core.py  main.py  service.py  utils.py  utils_median_cut.py
